# cmake

ProjectWithPocoOpenSSL/: CMakeLists.txt  GenEclipseCDT.sh  GenVS10Projects.bat  README  VSProjects.bat  toolchain.EclipseCDT.cmake  toolchain.WIN32.cmake
ProjectWithPocoOpenSSL/src/3PC/poco1.6.0/lib/linux/gcc4.4.7/x86_64/: libPocoCrypto.so.30  libPocoCryptod.so.30  libPocoData.so.30  libPocoFoundation.so.30  libPocoJSON.so.30  libPocoJSONd.so.30  libPocoNet.so.30  libPocoNetSSL.so.30  libPocoNetSSLd.so.30  libPocoUtil.so.30  libPocoUtild.so.30  libPocoXML.so.30  libPocoXMLd.so.30  libPocoZip.so.30  libPocoZipd.so.30
ProjectWithPocoOpenSSL/src/3PC/poco1.6.0/lib/vs2010/: CppUnit.exp  CppUnit.lib  CppUnitd.exp  CppUnitd.ilk  CppUnitd.lib  PocoCrypto.exp  PocoCrypto.lib  PocoCryptod.exp  PocoCryptod.ilk  PocoCryptod.lib  PocoData.exp  PocoData.lib  PocoDataODBC.exp  PocoDataODBC.lib  PocoDataODBCd.exp  PocoDataODBCd.lib  PocoDataSQLite.exp  PocoDataSQLite.lib  PocoDataSQLited.exp  PocoDataSQLited.ilk  PocoDataSQLited.lib  PocoDatad.exp  PocoDatad.lib  PocoFoundation.exp  PocoFoundation.lib  PocoFoundationd.exp  PocoFoundationd.lib  PocoJSON.exp  PocoJSON.lib  PocoJSONd.exp  PocoJSONd.ilk  PocoJSONd.lib  PocoNet.exp  PocoNet.lib  PocoNetSSL.exp  PocoNetSSL.lib  PocoNetSSLd.exp  PocoNetSSLd.ilk  PocoNetSSLd.lib  PocoNetd.exp  (+21 more)
ProjectWithPocoOpenSSL/src/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  HelloWorldExports.h
helloworld/: GenEclipseCDT.sh  GenVS10Projects.bat  README  toolchain.EclipseCDT.cmake  toolchain.WIN32.cmake
helloworld/src/HelloWorld/: HelloWorld.cpp  HelloWorldExports.h
src/HelloWorld/: CMakeLists.txt  HelloWorld.h
src/TestApp/: CMakeLists.txt  main.cpp
